a collection of perf enhancements
Signed-off-by: christian.lutnik <christian.lutnik@dynatrace.com>